--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sass": "^1.52.3",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-password": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
