--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.52.3",
     "typescript": "^4.6.0",
+    "uuid-by-string": "^3.0.7",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11",
     "yup-password": "^0.2.2"
